# agent-ui

./: .gitignore  AGENTS.md  README.md  README.zh.md  start-dev.sh
backend/: .env.example  AGENTS.md  pyproject.toml
backend/src/: server.py
backend/src/agents/: AGENTS.md  README.md
backend/src/agents/chat_agent/: README.md  __init__.py  agent.py
backend/src/agents/search_agent/: README.md  __init__.py  agent.py  prompts.py
backend/src/config/: base.py  model_config.py
backend/src/tools/: AGENTS.md  README.md
backend/src/tools/ask_user_question/: README.md  __init__.py  core.py  example.py
backend/src/tools/dev-utils/: README.md  create-tool-readme.sh
backend/src/tools/tavily/: README.md  __init__.py  core.py
backend/src/tools/user_control_flow/: __init__.py  user_control_flow_tools.py
backend/tests/: test_ask_user_question.py  test_chat_agent.py  test_search_agent.py  test_tavily.py
frontend/: AGENTS.md  README.md  README.zh.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  style.css
frontend/app/api/copilotkit/: route.ts
frontend/app/components/: AguiMessageRegistry.tsx  Navigation.tsx  README.md  RawResponseLogger.tsx  TwoPanelLayout.tsx
frontend/app/components/markdown/: CitationBlock.tsx  FootnoteDefinition.tsx  FootnoteReference.tsx  README.md  SearchResultCard.tsx  SourceReference.tsx  index.tsx  styles.css
frontend/app/components/tool-protocol/: AGENTS.md  ActionDetailPanel.tsx  (+4 more)
frontend/patches/: @copilotkit+runtime-client-gql+1.10.6.patch
scripts/: setup.sh
(+8 files in other folders)
